<resources>
    <string name="add_button_text">Add</string>
    <string name="app_title">MoneyLoft</string>
    <string name="price_hint">Price</string>
    <string name="title_hint">Title</string>
    <string name="prise_template">%1$s ₽</string>
    <string name="budget_title">Budget</string>
    <string name="hello_world">Hello World</string>
    <string name="Outcome">Outcome</string>
    <string name="outcome">Outcome</string>
    <string name="income">Income</string>
    <string name="enter_button_title">Enter</string>
    <string name="remove_title">Remove</string>
    <string name="remove_conformation">Delete this item?</string>
    <string name="windowActionModeOverlay">windowActionModeOverlay</string>
    <string name="actionModeBackground">actionModeBackground</string>
    <string name="balance">Balance</string>
    <string name="finances">Finances</string>
    <string name="delete_menu" translatable="false">" "</string>
    <string name="todo" translatable="false">TODO</string>

</resources>
