<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/add_button"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="33dp"
        android:paddingEnd="104dp"
        android:paddingBottom="68dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:background="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/title_text_color"
                android:textSize="24sp"
                android:background="@android:color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/price_hint"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/title_text_color"
                android:textSize="24sp"
                android:background="@android:color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="129dp"
        android:layout_marginEnd="129dp"
        android:background="@null"
        android:text="@string/add_button_text"
        android:enabled="false"
        android:textColor="@color/add_button_color"
        app:icon="@drawable/ic_check_green_24dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:iconTint="@color/add_button_color"
        />

</RelativeLayout>