<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="37dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="end"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/finances"
        android:textColor="@color/medium_grey"
        android:textSize="14sp"
        android:textStyle="normal"
        tools:text="Доступные финансы " />

    <TextView
        android:id="@+id/total_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="end"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/pale_orange"
        android:textSize="48sp"
        android:textStyle="normal"
        tools:ignore="RtlSymmetry"
        tools:text="67000₽" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingTop="41dp"
            android:paddingBottom="27dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="end"
                android:text="@string/outcome"
                android:textColor="@color/medium_grey"
                android:textSize="10sp"
                android:textStyle="normal"
                tools:text="Расход"
                tools:ignore="SmallSp" />


            <TextView
                android:id="@+id/total_outcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="end"
                android:textColor="@color/dark_sky_blue"
                android:textSize="24sp"
                android:textStyle="normal"
                tools:text="5400₽" />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingTop="41dp"
            android:paddingBottom="27dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="end"
                android:text="@string/income"
                android:textColor="@color/medium_grey"
                android:textSize="10sp"
                android:textStyle="normal"
                tools:text="Доход"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/total_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="end"
                android:textColor="@color/apple_green"
                android:textSize="24sp"
                android:textStyle="normal"
                tools:text="74000₽" />
        </LinearLayout>
    </LinearLayout>


    <com.loftschool.fomin.moneyloft.DiagramView
        android:id="@+id/diagramView"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

</LinearLayout>